updated beam staff cards

--- a/about.html
+++ b/about.html
@@ -281,50 +281,52 @@ description:
             //List of all staff members.
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2019 execs: Abby, Stephanie Z, Nikki, Sophie, Jocelyn, Nico, Brendan, Tiffany, Kelvin
-            var data = [['Aaron He', 'ChemE 2021', 'Curriculum, Site Leading', 'aaron'],
+            var data = [['Aaron He', 'ChemE 2021', 'Director of Site Leading', 'aaron'],
             ['Abby Cheng', 'ChemE 2021', 'Director of Logistics', 'abby'],
+            ['Andrew Shih', 'MCB & Data Science 2023', 'Outreach, Site Leading', 'andrew'],
             ['Ankur Jain', 'EECS & Business 2021', 'Logistics, Site Leading', 'ankur'],
-            ['Austin Nguyen', 'MechE 2022', 'Logistics, Site Leading', 'austin'],
-            ['Brendan Tsuda', 'Chemical Biology 2021', 'Director of Outreach', 'brendan'],
-            ['Briana Ong', 'IB 2020', 'President', 'briana'],
-            ['Cammie Young', 'Public Health 2021', 'Logistics, Mentor Development', 'cammie'],
-            ['Dana Yang', 'Applied Mathematics 2022', 'Curriculum, External Affairs', 'dana'],
-            ['Darren Kim', 'Business 2021', 'External Affairs, Site Leading', 'darrenk'],
-            ['Darren Omori', 'CS 2021', 'External Affairs, Logistics', 'darreno'],
-            ['David Paner', 'CS 2021', 'Curriculum, External Affairs', 'david'],
-            ['Elizabeth Greenberg', 'ChemE 2022', 'Curriculum, Site Leading', 'elizabeth'],
-            ['Evan Chin', 'ChemE 2021', 'Curriculum, Site Leading', 'evan'],
-            ['Jocelyn Liu', 'MCB 2020', 'Director of Site Leading', 'jocelyn'],
-            ['Jonas Katona', 'Applied Math 2020', 'Mentor Development, Outreach', 'jonas'],
-            ['Kahini Achrekar', 'Cognitive Science 2021', 'Mentor Development, Site Leading', 'kahini'],
-            ['Kaushal Partani', 'CS 2021', 'External Affairs, Site Leading', 'kaushal'],
-            ['Kayli Minear', 'Psychology & History 2020', 'External Affairs, Site Leading', 'kayli'],
-            ['Kelly Chang', 'MCB 2020', 'External Affairs, Site Leading', 'kelly'],
-            ['Kelvin Zhang', 'CS 2020', 'Director of External Affairs', 'kelvin'],
-            ['Krish Nayar', 'BioE 2021', 'Mentor Development, Site Leading', 'krish'],
-            ['Monica Oh', 'IB 2020', 'Curriculum, Site Leading', 'monica'],
-            ['Nico Carballal', 'MechE 2021', 'Director of Site Leading', 'nico'],
-            ['Nicole Denamur', 'IB 2020', 'Director of Curriculum', 'nikki'],
-            ['Nicole Zhu', 'CS 2021', 'Logistics, Mentor Development', 'nicole'],
-            ['Ningxin Zheng', 'MCB 2021', 'Curriculum, Logistics', 'ningxin'],
-            ['Peter Ren', 'Chemical Biology & CS 2020', 'Outreach, Site Leading', 'peter'],
-            ['Prashant Malyala', 'Business & CS 2022', 'Outreach, Site Leading', 'prashant'],
-            ['Radu Firtat', 'MCB 2020', 'Site Leading', 'radu'],
-            ['Rahul Devarapalli', 'CS 2021', 'Outreach, Site Leading', 'rahul'],
-            ['Sophie Yu', 'MCB 2021', 'Director of Curriculum', 'sophie'],
-            ['Stephanie Huang', 'MCB 2020', 'President', 'stephanieh'],
-            ['Stephanie Zhang', 'MCB 2020', 'Director of Logisitcs', 'stephaniez'],
-            ['Summer Bui', 'MCB 2021', 'Mentor Development, Outreach', 'summer'],
-            ['Tiffany Tran', 'IB & Psych 2020', 'Director of Mentor Development', 'tiffany'],
-            ['Zachary Huang', 'CS 2022', 'Curriculum, Logistics', 'zach']];
+            ['Austin Nguyen', 'MechE 2022', 'Director of Logistics', 'austin'],
+            ['Brandon Zhong', 'Data Science 2021', 'Logistics, Mentor Development', 'brandon'],
+            ['Brendan Tsuda', 'Chemical Biology 2021', 'Director of Site Leading', 'brendan'],
+            ['Cammie Young', 'Public Health 2021', 'Director of Mentor Development', 'cammie'],
+            ['Dana Yang', 'Applied Math & CS 2022', 'Curriculum, External Affairs', 'dana'],
+            ['Darren Omori', 'CS 2021', 'External Affairs, Logistics', 'darren'],
+            ['David Paner', 'CS 2021', 'Director of Curriculum', 'david'],
+            ['Elizabeth Greenberg', 'ChemE 2022', 'President', 'elizabeth'],
+            ['Evan Chin', 'ChemE 2021', 'Director of Curriculum', 'evan'],
+            ['Francesca Tinga', 'ChemE 2021', 'Mentor Development, Site Leading', 'francesca'],
+            ['Gabby Lau', 'IEOR 2021', 'External Affairs, Site Leading', 'gabby'],
+            ['George Zhou', 'CS 2021', 'External Affairs, Outreach', 'george'],
+            ['Ishan Gurnani', 'Applied Math 2022', 'Outreach, Site Leading', 'ishan'],
+            ['Jessica Choy', 'IB 2021', 'Curriculum, Site Leading', 'jessica'],
+            ['John John Huddleston', 'MechE 2022', 'Outreach, Site Leading', 'john-john'],
+            ['Kahini Achrekar', 'Cognitive Science 2021', 'External Affairs, Site Leading', 'kahini'],
+            ['Ken Hinh', 'MCB & Economics & Public Policy 2022', 'External Affairs, Site Leading', 'ken'],
+            ['Krish Nayar', 'BioE 2021', 'Outreach, Site Leading', 'krish'],
+            ['Kyle Kishimoto', 'Math (Teaching) 2023', 'Logistics, Mentor Development', 'kyle'],
+            ['Marisa Wong', 'MCB 2022', 'Logistics, Outreach', 'marisa'],
+            ['Matthew Cuan', 'IB 2022', 'Director of External Affairs', 'matthew'],
+            ['Minji Lee', 'Chemistry 2022', 'Curriculum, Logistics', 'minji'],
+            ['Monica Cao', 'Nutritional Sciences 2022', 'Curriculum, Mentor Development', 'monica'],
+            ['Nico Carballal', 'MechE 2021', 'President', 'nico'],
+            ['Nicole Xu', 'MCB 2021', 'External Affairs, Site Leading', 'nicolex'],
+            ['Nicole Zhu', 'CS & Statistics 2021', 'Logistics, Mentor Development', 'nicolez'],
+            ['Prashant Malyala', 'CS 2022', 'Director of External Affairs', 'prashant'],
+            ['Priyanka Kannabran', 'MCB 2022', 'Outreach, Site Leading', 'priyanka'],
+            ['Ryan Dai', 'MSE 2022', 'Mentor Development, Outreach', 'ryan'],
+            ['Samhita Katteri', 'Cognitive Science 2022', 'Mentor Development, Site Leading', 'samhita'],
+            ['Sophia Wang', 'MCB & Business 2022', 'Curriculum, Logistics', 'sophia'],
+            ['Summer Bui', 'MCB 2021', 'Director of Outreach', 'summer'],
+            ['Zach Huang', 'CS 2022', 'Curriculum, Logistics', 'zach'],
+            ['Zoe Ko', 'Physics & Data Science 2023', 'Mentor Development, Outreach', 'zoe']];
             //Categories to sort by. In this case, sort by year.
             var sortCategories = [
                 "President",
                 "Director",
-                "2019",
-                "2020",
                 "2021",
-                "2022"
+                "2022",
+                "2023",
+                "2024"
             ];
             var htmlExpr = '<div class=\"container-row\">';
 
@@ -342,7 +344,7 @@ description:
                         //Committees
                         htmlExpr += '<h4>' + data[i][2] + '</h4></div>';
                         //Display image
-                        htmlExpr += '<img src=../images/2019_2020staff/' + data[i][3] + '.jpg id=staff-pic></div>';
+                        htmlExpr += '<img src=../images/2020_2021staff/' + data[i][3] + '.jpg id=staff-pic></div>';
                     }
                 }
             }
