--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ description: Berkeley Engineers and Mentors
 				in the meantime, be sure to check out our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
 
 				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2021 Application can be found <a target=_blank href="https://forms.gle/G3fPVjXzT7iGcjt29">here</a>, 
-					and be sure to check out our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
+					and be sure to check out our <a href="join">join page</a> or <a target=_blank href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
 
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
