added the boy neil

--- a/about.html
+++ b/about.html
@@ -308,6 +308,7 @@ description:
             ['Matthew Cuan', 'IB 2022', 'Director of External Affairs', 'matthew'],
             ['Minji Lee', 'Chemistry 2022', 'Curriculum, Logistics', 'minji'],
             ['Monica Cao', 'Nutritional Sciences 2022', 'Curriculum, Mentor Development', 'monica'],
+            ['Neil Kamdar', 'CS 2023', 'Curriculum, Site Leading', 'neil'],
             ['Nico Carballal', 'MechE 2021', 'President', 'nico'],
             ['Nicole Xu', 'MCB 2021', 'External Affairs, Site Leading', 'nicolex'],
             ['Nicole Zhu', 'CS & Statistics 2021', 'Logistics, Mentor Development', 'nicolez'],
