--- a/join.html
+++ b/join.html
@@ -15,20 +15,18 @@ description:
       and engineering with the local community!
     </h2>
    <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>  -->
-    <!-- <p><strong>Spring 2020 applications are now closed</strong> but feel free to add 
+    <!-- <p><strong>Spring 2020 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2021 infosession/application.</p> -->
 
-        <p>For interested <strong>Spring 2021 mentors</strong>, stop by at the following events for application information!
+        <p>For interested <strong>Fall 2021 mentors</strong>, stop by at our infosession for application information!
           More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!</p>
 
-        <p>BEAM Spring 2021 Application: <a target=_blank href="https://forms.gle/G3fPVjXzT7iGcjt29">https://forms.gle/G3fPVjXzT7iGcjt29</a></p>
+        <p>BEAM Fall 2021 Application: To released soon!</p>
 
         <p>
-          <strong>January 25 from 5-7 PM PST</strong> <br>Calapalooza <br><a target=_blank href="https://berkeley.zoom.us/j/9364034367">https://berkeley.zoom.us/j/9364034367</a><br><br>
-          <strong>January 29 from 7-8 PM PST</strong> <br>Berkeley Education Clubs Infosession <br><a target=_blank href="https://www.facebook.com/events/798488734036190">https://www.facebook.com/events/798488734036190</a><br><br>
-          <strong>February 1st from 7-8 PM PST</strong> <br>BEAM Infosession <br><a target=_blank href="https://www.facebook.com/events/161068278857651">https://www.facebook.com/events/161068278857651</a>
+          <strong>September 7th from 8-9 PM PST at 120 Latimer</strong> <br>BEAM Infosession <br><a target=_blank href="https://www.facebook.com/events/180616030828306">https://www.facebook.com/events/180616030828306</a>
         </p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
@@ -58,7 +56,7 @@ description:
 
 
 </section>
-<h2>Watch our Fall Infosession!</h2>
+<h2>Watch our past Fall 2020 Infosession!</h2>
 <div style="text-align: center; margin-bottom: 50px;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/uSbi-NqTV1I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -162,12 +160,12 @@ description:
   <div style="width:75%; display:inline-block;">
     <p style="text-align: left; "> <b>How will BEAM be adapted for the Fall 2020 semester? </b></p>
     <p style="text-align: left;">
-      Due to the exceptional circumstances caused by COVID-19, BEAM will operate remotely by recording and editing 
-      lesson videos that will then be shared with our affiliated sites. In addition, all mentors will be working on 
-      group-directed projects throughout the semester focused either on improving the educational experiences of our 
+      Due to the exceptional circumstances caused by COVID-19, BEAM will operate remotely by recording and editing
+      lesson videos that will then be shared with our affiliated sites. In addition, all mentors will be working on
+      group-directed projects throughout the semester focused either on improving the educational experiences of our
       students or enhancing processes within BEAM. <br><br>
-      We understand that this semester will look quite a bit different 
-      from those past, but as our mission to make STEM accessible to students of all socioeconomic backgrounds 
+      We understand that this semester will look quite a bit different
+      from those past, but as our mission to make STEM accessible to students of all socioeconomic backgrounds
       becomes more essential than ever, we would be thrilled if you would <a target=_blank
       href="https://www.facebook.com/beam.teach/">join us</a>.
     </p>
