updated f21 join graphic

--- a/join.html
+++ b/join.html
@@ -50,7 +50,7 @@ description:
 
 
 
-  <img style="width: 25vw; height: 25vw;" src="/images/join1.png">
+  <img style="width: 25vw; height: 25vw;" src="/images/joinF21.png">
 
 
 
