--- a/join.html
+++ b/join.html
@@ -26,6 +26,7 @@ description:
         <p>BEAM Fall 2021 Application: To released soon!</p>
 
         <p>
+          <strong>September 7th from 5-7 PM PST </strong> <br>Calaplooza <br><a target=_blank href="https://berkeley.zoom.us/j/99510156208">https://berkeley.zoom.us/j/99510156208</a><br><br>
           <strong>September 7th from 8-9 PM PST at 120 Latimer</strong> <br>BEAM Infosession <br><a target=_blank href="https://www.facebook.com/events/180616030828306">https://www.facebook.com/events/180616030828306</a>
         </p>
 
@@ -50,7 +51,7 @@ description:
 
 
 
-  <img style="width: 25vw; height: 25vw;" src="/images/joinF21.png">
+  <img style="width: 25vw; height: 25vw;" src="/images/join1.png">
 
 
 
