--- a/join.html
+++ b/join.html
@@ -23,7 +23,7 @@ description:
           More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!</p>
 
-        <p>BEAM Fall 2021 Application: To released soon!</p>
+        <p>BEAM Fall 2021 Application: <a target=_blank href="https://tinyurl.com/beam-app-fa21">https://tinyurl.com/beam-app-fa21</a></p>
 
         <p>
           <strong>September 7th from 5-7 PM PST </strong> <br>Calaplooza <br><a target=_blank href="https://berkeley.zoom.us/j/99510156208">https://berkeley.zoom.us/j/99510156208</a><br><br>
