--- a/join.html
+++ b/join.html
@@ -59,7 +59,7 @@ description:
 </section>
 <h2>Watch our past Fall 2020 Infosession!</h2>
 <div style="text-align: center; margin-bottom: 50px;">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/uSbi-NqTV1I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pFPDoEMbnrw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div
   style="background-color:#f2f2f2; padding-top: 5vh; text-align: center; width:100vw; margin-left: -50vw; left:50%; position:relative;">
