--- a/join.html
+++ b/join.html
@@ -57,7 +57,7 @@ description:
 
 
 </section>
-<h2>Watch our past Fall 2020 Infosession!</h2>
+<h2>Watch our Fall 2021 Infosession!</h2>
 <div style="text-align: center; margin-bottom: 50px;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/pFPDoEMbnrw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
