very small changes to join text to test updating website.

--- a/join.html
+++ b/join.html
@@ -19,16 +19,27 @@ description:
       your email below or follow us on <a target=_blank
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2021 infosession/application.</p> -->
 
-        <p>For interested <strong>Fall 2021 mentors</strong>, stop by at our infosession for application information!
+        <p>For interested <strong>Spring 2022 mentors</strong>, stop by at our infosession for application information!
           More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!</p>
 
-        <p>BEAM Fall 2021 Application: <a target=_blank href="https://tinyurl.com/beam-app-fa21">https://tinyurl.com/beam-app-fa21</a></p>
+            <p>
+    					BEAM Spring 2022 Application: Will be released soon!
+    					<!--
+    					<a target=_blank href="https://tinyurl.com/beam-app-fa21">https://tinyurl.com/beam-app-fa21
+    					</a>
+    				  -->
+    				</p>
 
-        <p>
-          <strong>September 7th from 5-7 PM PST </strong> <br>Calaplooza <br><a target=_blank href="https://berkeley.zoom.us/j/99510156208">https://berkeley.zoom.us/j/99510156208</a><br><br>
-          <strong>September 7th from 8-9 PM PST at 120 Latimer</strong> <br>BEAM Infosession <br><a target=_blank href="https://www.facebook.com/events/180616030828306">https://www.facebook.com/events/180616030828306</a>
-        </p>
+            <p>
+    					<!--
+              <strong>September 7th from 5-7 PM PST </strong> <br>Calaplooza <br><a target=_blank href="https://berkeley.zoom.us/j/99510156208">https://berkeley.zoom.us/j/99510156208</a><br><br>
+    				-->
+    					<strong>Date and Location TBD</strong> <br>BEAM Infosession <br>
+    					<!--
+    					<a target=_blank href="https://www.facebook.com/events/180616030828306">https://www.facebook.com/events/180616030828306</a>
+    				-->
+            </p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
