Updated Application text and hyperlink, as well as BEAM infosession text for Spring 2022.

--- a/join.html
+++ b/join.html
@@ -20,11 +20,16 @@ description:
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2021 infosession/application.</p> -->
 
         <p>For interested <strong>Spring 2022 mentors</strong>, stop by at our infosession for application information!
+          <!--
           More details are available on our <a target=_blank
-            href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!</p>
+          href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!
+          -->
+          </p>
 
             <p>
-    					BEAM Spring 2022 Application: Will be released soon!
+    					<a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform"> BEAM Spring 2022 Application </a>.<br>
+              Due Friday, February 4th at NOON (12pm PST)!
+
     					<!--
     					<a target=_blank href="https://tinyurl.com/beam-app-fa21">https://tinyurl.com/beam-app-fa21
     					</a>
@@ -35,11 +40,20 @@ description:
     					<!--
               <strong>September 7th from 5-7 PM PST </strong> <br>Calaplooza <br><a target=_blank href="https://berkeley.zoom.us/j/99510156208">https://berkeley.zoom.us/j/99510156208</a><br><br>
     				-->
-    					<strong>Date and Location TBD</strong> <br>BEAM Infosession <br>
+
+    					<strong>BEAM Infosession</strong> <br>
+              Tuesday January 31st 6:30pm <br>
+              Anthropology and Art Practice Building<br>
+              Room 160<br>
+
     					<!--
     					<a target=_blank href="https://www.facebook.com/events/180616030828306">https://www.facebook.com/events/180616030828306</a>
     				-->
             </p>
+
+            <p> More details are available on our <a target=_blank
+              href="https://www.facebook.com/beam.teach/events/">Facebook</a> page.
+              Follow us or add your email in the form below to stay updated!</p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
