--- a/join.html
+++ b/join.html
@@ -75,8 +75,10 @@ description:
   </div>
 
 
-
+  <!--
   <img style="width: 25vw; height: 25vw;" src="/images/join1.png">
+  -->
+  <img style="width: 42vw; height: 28vw;" src="/images/Beam_Sp22_Front_.png">
 
 
 
