--- a/join.html
+++ b/join.html
@@ -42,7 +42,7 @@ description:
     				-->
 
     					<strong>BEAM Infosession</strong> <br>
-              Tuesday January 31st 6:30pm <br>
+              Tuesday January 31st 7:00pm <br>
               Anthropology and Art Practice Building<br>
               Room 160<br>
 
@@ -52,7 +52,7 @@ description:
             </p>
 
             <p> More details are available on our <a target=_blank
-              href="https://www.facebook.com/beam.teach/events/">Facebook</a> page.
+              href="https://www.facebook.com/beam.teach/">Facebook</a> page.
               Follow us or add your email in the form below to stay updated!</p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
