updated infosession videoto sp22

--- a/join.html
+++ b/join.html
@@ -84,9 +84,9 @@ description:
 
 
 </section>
-<h2>Watch our Fall 2021 Infosession!</h2>
+<h2>Watch our Spring 2022 Infosession!</h2>
 <div style="text-align: center; margin-bottom: 50px;">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/pFPDoEMbnrw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U_J7sfXM3VM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div
   style="background-color:#f2f2f2; padding-top: 5vh; text-align: center; width:100vw; margin-left: -50vw; left:50%; position:relative;">
