update join text for post application season sp22

--- a/join.html
+++ b/join.html
@@ -14,46 +14,38 @@ description:
     <h2 style="font-size: 2.0em; text-align: left;">Joining BEAM is the perfect way to share your love for science
       and engineering with the local community!
     </h2>
-   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>  -->
-    <!-- <p><strong>Spring 2020 applications are now closed</strong> but feel free to add
+    <!-- Next 4 lines are for AFTER Aplication season -->
+   <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+    <p><strong>Spring 2022 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
-        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2021 infosession/application.</p> -->
+        href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2022 infosession/application.</p>
 
-        <p>For interested <strong>Spring 2022 mentors</strong>, stop by at our infosession for application information!
-          <!--
-          More details are available on our <a target=_blank
-          href="https://www.facebook.com/beam.teach/events/">Facebook</a> page. Follow us or add your email in the form below to stay updated!
-          -->
+
+        <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
+        <!--
+          <p>
+            For interested <strong>Spring 2022 mentors</strong>,
+            stop by at our infosession for application information!
           </p>
 
-            <p>
-    					<a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform"> BEAM Spring 2022 Application </a>.<br>
-              Due Friday, February 4th at NOON (12pm PST)!
+          <p>
+  					<a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform">
+            BEAM Spring 2022 Application </a>.<br>
+            Due Friday, February 4th at NOON (12pm PST)!
+          </p>
 
-    					<!--
-    					<a target=_blank href="https://tinyurl.com/beam-app-fa21">https://tinyurl.com/beam-app-fa21
-    					</a>
-    				  -->
-    				</p>
+          <p>
+  					<strong>BEAM Infosession</strong> <br>
+            Tuesday January 31st 7:00pm <br>
+            Anthropology and Art Practice Building<br>
+            Room 160<br>
+          </p>
 
-            <p>
-    					<!--
-              <strong>September 7th from 5-7 PM PST </strong> <br>Calaplooza <br><a target=_blank href="https://berkeley.zoom.us/j/99510156208">https://berkeley.zoom.us/j/99510156208</a><br><br>
-    				-->
-
-    					<strong>BEAM Infosession</strong> <br>
-              Tuesday January 31st 7:00pm <br>
-              Anthropology and Art Practice Building<br>
-              Room 160<br>
-
-    					<!--
-    					<a target=_blank href="https://www.facebook.com/events/180616030828306">https://www.facebook.com/events/180616030828306</a>
-    				-->
-            </p>
-
-            <p> More details are available on our <a target=_blank
-              href="https://www.facebook.com/beam.teach/">Facebook</a> page.
-              Follow us or add your email in the form below to stay updated!</p>
+          <p> More details are available on our <a target=_blank
+            href="https://www.facebook.com/beam.teach/">Facebook</a> page.
+            Follow us or add your email in the form below to stay updated!
+          </p>
+          -->
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
