Added Poppins font to landing page, and changed some photos as well as a news post in about

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ description:
                     <img src="/images/npr.png">
                 </div>
                 <div class="news-container">
-                    <h3 class="source" style="font-weight: bold;">NPR | Will STEM education be the child left behind?
+                    <h3 class="source" style="font-weight: bold;">NPR | Will STEM education be the child left behind? | 28 Oct 2015
                     </h3>
                     <p style="font-size: 1.125em;">
                         "A combination of budget cuts and policy decisions has left many local, state and federal bodies
@@ -106,22 +106,24 @@ description:
 
             <div class="thumbnal mid">
                 <div class="news-logo">
-                    <img style="padding-top: 18%; padding-bottom: 17%;" src="/images/berkscirev.png">
+                    <img style="padding-top: 10%; padding-bottom: 10%;" src="/images/BASF_logo.png">
                 </div>
                 <div class="news-container">
-                    <h3 class="source" style="font-weight: bold;">Berkeley Science Review | Cal Engineering Students
-                        Take It To the
-                        Classroom</h3>
-                    <p style="font-size: 1.125em;">
+                    <h3 class="source" style="font-weight: bold;">Bay Area Science Festival | Festival returns to Oracle Park after COVID Hiatus | 21 Apr 2022
+                    </h3>
+                    <!-- <p style="font-size: 1.125em;">
                         "[According to the Lawrence Hall of Science] 80% of local K-5 teachers spend less than 60
                         minutes
                         per week teaching science–and 16% spend no time at all.
                         BEAM...step[s] in where the state and local governments have not."
-                    </p>
+                    </p> -->
 
-                    <button
-                        onclick="window.open('http://berkeleysciencereview.com/beam-cal-engineering-students-take-it-to-the-classroom/', '_blank')"
-                        class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read</span></button>
+
+                    <iframe class="responsive-iframe" width="100%" height="205" src="https://www.youtube.com/embed/aGzIT39kpuU"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+
+
 
 
                 </div>
@@ -133,7 +135,7 @@ description:
                 </div>
                 <div class="news-container">
                     <h3 class="source" style="font-weight: bold;">SFGate | Cause on top of classes draw UC Berkeley
-                        students</h3>
+                        students | 28 Nov 2014</h3>
                     <p style="font-size: 1.125em;">
                         BEAM “is not just some sort of weekly outreach thing and you go and it’s like 'whatever,’” BEAM
                         president ('14) Tiffany Chung says.
