--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: Berkeley Engineers and Mentors
 
 <div class="Logo">
 	<div class="stuff">
-		<strong id="acronym">BEAM</strong>
+		<strong id="acronym_v2" >BEAM</strong>
 		<br>
 		<h1 id="words">Berkeley Engineers and Mentors</h1>
 		<br>
@@ -76,11 +76,12 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 
-				<!-- <p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2021 Application will be published after our <a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>;
-				in the meantime, be sure to check out our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
+			 <p class="body">Interested in being part of the BEAM team? Our Fall 2022 Application will be published after our
+				<!-- <a target=_blank href="https://www.facebook.com/events/161068278857651">infosession</a>; --> infosession at the begining of the semester.
+				In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a>, our <a href="join">join page</a> or <a href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
 
-				<p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Spring 2022 Application can be found <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform">here</a>,
-					and be sure to check out our <a href="join">join page</a> or <a target=_blank href="https://facebook.com/beam.teach">Facebook</a> for more information!</p>
+				<!-- <p class="body">Interested in being part of the BEAM team? <a href="join/#FAQ">Any questions?</a> Our Fall 2022 Application can be found <a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform">here</a>,
+					and be sure to check out our <a href="join">join page</a> or <a target=_blank href="https://facebook.com/beam.teach">Facebook</a> for more information!</p> -->
 
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
@@ -88,7 +89,7 @@ description: Berkeley Engineers and Mentors
 						</span></button>
 			</div>
 			<div class=" image">
-				<img src="/images/graduation_22.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/Senions2022.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
