--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ description: Berkeley Engineers and Mentors
 						</span></button>
 			</div>
 			<div class=" image">
-				<img src="/images/Senions2022.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/Senions2022.JPG" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
