--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: Berkeley Engineers and Mentors
 	<div class="stuff">
 		<strong id="acronym_v2" >BEAM</strong>
 		<br>
-		<h1 id="words">Berkeley Engineers and Mentors</h1>
+		<h1 id="words_v2">Berkeley Engineers and Mentors</h1>
 		<br>
 		<a class="scroll-down" href="#target"></a>
 	</div>
@@ -89,7 +89,7 @@ description: Berkeley Engineers and Mentors
 						</span></button>
 			</div>
 			<div class=" image">
-				<img src="/images/Senions2022.jpg" alt="Screenshot" class="screenshot editable" />
+				<img src="/images/Seniors2022.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
